2006-09-08  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/SOGoUI/UIxComponent.[hm]: removed the "viewTimeZone" ivar and
	method. Removed the "backendTimeZone" method.

	* UI/MainUI/SOGoUserHomePage.[hm]: made a subclass of UIxComponent
	instead of SoComponent.

	* SoObjects/Appointments/SOGoAppointmentObject.m: 
	([SOGoAppointmentObject -viewTimeZoneForPerson:_person]): returns
	[self serverTimeZone] instead of "EST" (which was removed).

	* SoObjects/Appointments/SOGoAppointmentFolder.[hm]: removed the
	"timeZone" ivar and its accessors.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject -serverTimeZone]): new
	centralized method returing the timezone configured in the
	userdefaults db or "Canada/Eastern" if missing.
	([SOGoObject -userTimeZone]): new centralized method returing the
	timezone of the current user or the server timezone if missing
	from the user configuration table.

2006-09-07  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/SchedulerUI.js: implemented caching of
	date selectors.

	* UI/SOGoUI/UIxComponent.m ([UIxComponent -userFolderPath]):
	return a path based on the object's context instead of the first
	level in SOGo's object hierarchy...

2006-09-06  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Templates/SchedulerUI/UIxCalDayTable.wox: day columns can now
	be clicked.

	* UI/Templates/SchedulerUI/UIxCalDateSelector.wox: pass the user's
	timezone ([self viewTimeZone]) to the WEMonthOverview component to
	avoid a confusion with the days.

	* UI/Templates/SchedulerUI/UIxCalInlineAptView.wox: appointments
	can now be clicked.

	* UI/WebServerResources/SchedulerUI.js: implemented a mechanism to
	imitate Sunbird's synchronization between the 3 visible views.

	* UI/SOGoUI/UIxComponent.m ([UIxComponent -selectedDate]): make
	sure the numbers in dateString are formatted so as to take 4 chars
	for the year and 2 for the day and the month, otherwise
	NSCalendarDate will return a nil date.