@@ -88,8 +88,6 @@
 - (id)privateCalendar:(NSString *)_key inContext:(id)_ctx {
   static Class calClass = Nil;
   id calendar;
-  NSUserDefaults *userPrefs;
-  NSTimeZone *timeZone;
   
   if (calClass == Nil)
     calClass = NSClassFromString(@"SOGoAppointmentFolder");
@@ -101,10 +99,6 @@
   calendar = [[calClass alloc] initWithName:_key inContainer:self];
   [calendar setOCSPath:[self ocsPrivateCalendarPath]];
 
-  userPrefs = [[_ctx activeUser] userDefaults];
-  timeZone = [NSTimeZone
-               timeZoneWithName: [userPrefs stringForKey: @"timezonename"]];
-  [calendar setTimeZone: timeZone];
   return [calendar autorelease];
 }
 
